# mmBTbachr2

./: README.md
code/: CMakeLists.txt  Doxyfile  multimouse.cpp  multimouse.h
code/cfg/: config.json
code/inc/: RealMouse.h  configparser.h  mmClient.h  mmCursor.h  mmCursorCtrl.h  mmRealMouseCtrl.h  mmServer.h  mmThreadsafeQueue.h  mmVirtualMouseCtrl.h  mrmCfgParser.h  mrmCursor.h  mrmCursorControl.h  mrmMiceControl.h  mrmMouse.h  mrmMultiRemoteMouse.h  mrmOSCursor.h  mrmScreen.h  mrmUDPClient.h  mrmUDPServer.h  multimouse.h  osinput.h
code/nlohmann_json/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  nlohmann_json.cbp  nlohmann_jsonTargets.cmake
code/nlohmann_json/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
code/nlohmann_json/test/cmake_add_subdirectory/: CTestTestfile.cmake  Makefile  cmake_install.cmake
code/nlohmann_json/test/cmake_import/: CTestTestfile.cmake  Makefile  cmake_install.cmake
code/nlohmann_json/test/cmake_import_minver/: CTestTestfile.cmake  Makefile  cmake_install.cmake
code/src/: RealMouse.cpp  configparser.cpp  main.cpp  mmClient.cpp  mmCursor.cpp  mmCursorCtrl.cpp  mmRealMouseCtrl.cpp  mmServer.cpp  mmThreadsafeQueue.cpp  mmVirtualMouseCtrl.cpp  mrmCfgParser.cpp  mrmCursor.cpp  mrmCursorControl.cpp  mrmMiceControl.cpp  mrmMouse.cpp  mrmMultiRemoteMouse.cpp  mrmOSCursor.cpp  mrmScreen.cpp  mrmUDPClient.cpp  mrmUDPServer.cpp  multimouse.cpp  shader.cpp
documentation/: diagramme.odp
documentation/pm/: Ziele.txt
documentation/poccode/opengl_transparent_noevent/: CMakeLists.txt  main.c
documentation/thesis/: bt_bachr2_multimouse_v_0_0.odt  bt_bachr2_multimouse_v_0_1.odt  bt_bachr2_multimouse_v_0_2.odt  bt_bachr2_multimouse_v_0_3.odt  bt_bachr2_multimouse_v_0_4.odt
documentation/timescheduling/: journal.txt  zeitplan_bt.ods  zeitplan_grob.txt
